--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
